# rust-mnist

./: Cargo.toml  README.md  main.rs
