[package]
name = "rust_neuralnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
csv = "1.3.0"
ndarray = "0.15.6"
rand = "0.8.5"
serde = { version = "1.0.118", features = ["derive"] }
